--- a/src/main/resources/static/style/style_adminProduct.css
+++ b/src/main/resources/static/style/style_adminProduct.css
@@ -26,14 +26,18 @@ div#proTblArea {
 }
 
 div.proTblHeader {
+	border-bottom: 1px solid #000;
 	font-weight: bold;
 }
-
+div.listRow{
+	border-bottom: 1px solid #ccc;
+}
 div.proTblList>span {
 	padding: 12px 15px;
 	font-size: 18px;
 	text-align: center;
 }
+
 
 div.proTblList>span:nth-child(1) {
 	width: 50px;
