--- a/src/main/resources/static/style/style_index.css
+++ b/src/main/resources/static/style/style_index.css
@@ -12,9 +12,9 @@ div#mainPage a {
 	text-decoration-line: none;
 }
 
-div.mainWrap * {}
-/* 슬라이드 쇼 이미지 영역 시작 - 0713 수정 사항 있음 */
 #sildeArea {
+	
+	position: relative;
 	width: 100%;
 	margin-bottom: 20px;
 	overflow: hidden;
@@ -29,7 +29,7 @@ div.mainWrap * {}
 
 
 .slide_div img {
-	max-width: 100%;
+	width: 100%;
 	margin: auto;
 }
 
@@ -38,7 +38,7 @@ div.mainWrap * {}
 	border-radius: 10px;
 	background-color: rgba(256,256,256,0.05);
 	position: absolute;
-	width: 60px;
+	width: 50px;
 	height: 100px;
 	left: 0;
 	top: 45%;
@@ -50,7 +50,7 @@ div.mainWrap * {}
 	border-radius: 10px;
 	background-color: rgba(256,256,256,0.05);
 	position: absolute;
-	width: 60px;
+	width: 50px;
 	height: 100px;
 	right: 0px;
 	top: 45%;
@@ -78,43 +78,20 @@ div.mainWrap * {}
 	position: absolute;
 	width: 70px;
 	height: 70px;
-	right: 0;
+	right: 4%;
 	top: 35%;
 	z-index: 1;
 }
 .sub-slick-prev:hover, .sub-slick-next:hover{
 	cursor: pointer;
 }
-.custom-prev-button,
-.custom-next-button {
-  background-color: #ccc;
-  border: none;
-  color: #fff;
-  padding: 20px;
-}
-#slideBtnArea{	display: none;}
-.arrow-left,
-.arrow-right {
-  display: inline-block;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 12px;
-}
+
 .mainSlide{
-	height: 70px;
+	width: 20px;
+    height: 60px;
 }
 
-.arrow-left {
-	
-  border-color: transparent #000 transparent transparent;
-  margin-right: 15px;
-}
 
-.arrow-right {
-  border-color: transparent transparent transparent #000;
-  margin-left: 15px;
-}
 /* 슬라이드 쇼 이미지 영역 끝 */
 
 /* div##dailyBestArea 시작 */
